--- a/src/content/projects/pi-desk/index.mdx
+++ b/src/content/projects/pi-desk/index.mdx
@@ -22,28 +22,28 @@ I assumed the Ikea legs had some sort of sync unit and limit switches within the
 To interface with this PCB as non-destructively as possible, I made a replacement for the original button’s ribbon wire out of plastic, flexible adhesive, and wires that I attached to a screw terminal. The screw terminal is connected to a bank of two relays for software control, and a 3.5mm headphone jack for pluggable hardware control in the event that the software isn’t working.
 
 <Figure size="large">
-  <Grid gutter="calc(var(--spaceDefault) / 2)">
+  <Grid gutter="0.5rem">
     <GridItem width={{ sm: '1/3 * 100%' }}>
       <Image
         src="./IMG_0814.jpg"
-        sizes="(max-width: 480px) 100vw, (max-width: 700px) 33vw, (min-width: 701px) 310px"
-        widths={[250, 470, 620]}
+        sizes="(max-width: 480px) 100vw, (max-width: 700px) 33vw, (max-width: 999px) 235px, (min-width: 1000px) 295px"
+        widths={[235, 295, 470, 590, 720, 960]}
         alt="Deconstructing Ikea controller module"
       />
     </GridItem>
     <GridItem width={{ sm: '1/3 * 100%' }}>
       <Image
         src="./IMG_0824.jpg"
-        sizes="(max-width: 480px) 100vw, (max-width: 700px) 33vw, (min-width: 701px) 310px"
-        widths={[250, 470, 620]}
+        sizes="(max-width: 480px) 100vw, (max-width: 700px) 33vw, (max-width: 999px) 235px, (min-width: 1000px) 295px"
+        widths={[235, 295, 470, 590, 720, 960]}
         alt="Making a ribbon cable replacement"
       />
     </GridItem>
     <GridItem width={{ sm: '1/3 * 100%' }}>
       <Image
         src="./IMG_0877.jpg"
-        sizes="(max-width: 480px) 100vw, (max-width: 700px) 33vw, (min-width: 701px) 310px"
-        widths={[250, 470, 620]}
+        sizes="(max-width: 480px) 100vw, (max-width: 700px) 33vw, (max-width: 999px) 235px, (min-width: 1000px) 295px"
+        widths={[235, 295, 470, 590, 720, 960]}
         alt="Work-in-progress of custom controller module"
       />
     </GridItem>
