Tighten up dark mode

--- a/src/content/writing/the-black-pixel-web-stack/index.mdx
+++ b/src/content/writing/the-black-pixel-web-stack/index.mdx
@@ -68,7 +68,7 @@ To lint our CSS, we use [Stylelint](http://stylelint.io/) and [postcss-bem-linte
 
 ## Future tech
 
-<PostVideo src="./future-tech.mp4" />
+<PostVideo src="./future-tech.mp4" aspectRatio="1 / 1" />
 
 Facebook’s [GraphQL](http://graphql.org/docs/getting-started/) is a new way to facilitate client-server communication. It could be really interesting to use on a project where we’re building server-side support for a mobile client. Instead of having individual RESTful API endpoints, GraphQL gives you a single endpoint for specifying what data you’d like in a [syntax that resembles JSON but without property values](https://facebook.github.io/react/blog/2015/05/01/graphql-introduction.html#what-is-graphql). You request the keys you’d like, and GraphQL returns the key-value pairs.
 
