Add eager loading to image above fold

--- a/src/content/projects/workspaces/index.mdx
+++ b/src/content/projects/workspaces/index.mdx
@@ -15,7 +15,7 @@ My home office was featured in [Edition 335](https://twitter.com/workspacesxyz/s
 
 I shot the photos on a Canon 5D Mark III using 24mm f/1.4L II and 100mm f/2.8L lenses.
 
-<PostImage src="./0S7A7679.jpg" alt="Workspaces interview" size="large" />
+<PostImage src="./0S7A7679.jpg" alt="Workspaces interview" size="large" loading="eager" />
 
 ## What is your favorite item in your workspace?
 
