Normalize image cover names, add B&W variants

--- a/src/content/projects/anna-akana/index.mdx
+++ b/src/content/projects/anna-akana/index.mdx
@@ -2,7 +2,7 @@
 title: AnnaAkana.com
 description: Designing and building a new website for multihyphenate Anna Akana, including a custom Node.js service that pipes realtime social statistics to the UI over WebSocket.
 date: 2014-01-01
-image: ./afflicted-inc.jpg
+image: ./anna-akana-cover.jpg
 video: ./anna-akana-website.mp4
 status: live
 ---
