--- a/src/content/projects/hoist/index.mdx
+++ b/src/content/projects/hoist/index.mdx
@@ -3,7 +3,7 @@ title: Hoist; the band years
 description: Fond memories of an intro to design and creative work.
 date: 2010-01-01
 dateRange: 2005–2010
-image: ./hoist.jpg
+image: ./hoist-cover.jpg
 status: live
 ---
 
