--- a/src/content/projects/pi-desk/index.mdx
+++ b/src/content/projects/pi-desk/index.mdx
@@ -2,7 +2,7 @@
 title: PiDesk
 description: Hacking Ikea's sit-stand desk with a Raspberry Pi to support realtime height feedback and programmatic control.
 date: 2015-01-01
-image: ./pi-desk.jpg
+image: ./pi-desk-cover.jpg
 status: live
 ---
 
