--- a/src/content/writing/herman-miller-lifework/index.mdx
+++ b/src/content/writing/herman-miller-lifework/index.mdx
@@ -2,7 +2,7 @@
 title: Herman Miller Lifework
 description: An interview with Herman Miller for their Lifework blog.
 date: 2013-05-08
-image: ./herman-miller-lifework.jpg
+image: ./lifework-cover.jpg
 cta: Read Interview
 status: live
 ---
