--- a/src/content/writing/tesla-software-problems-in-winter/index.mdx
+++ b/src/content/writing/tesla-software-problems-in-winter/index.mdx
@@ -2,7 +2,7 @@
 title: Tesla software <br /> problems in winter
 description: When Designed in California™ meets -40°.
 date: 2021-03-29
-image: ./share-bright.jpg
+image: ./tesla-cover.jpg
 video: ./climate-control-compressed.mp4
 skipHero: true
 status: live
