--- a/src/content/projects/designing-a-home/index.mdx
+++ b/src/content/projects/designing-a-home/index.mdx
@@ -3,7 +3,7 @@ title: Designing a home
 description: Blending the old with the new in the renovation of our 1920s home, adventures in custom lighting fabrication, and learning how to model in 3D.
 date: 2018-01-01
 dateRange: 2017–2018
-image: ./designing-a-home.jpg
+image: ./designing-a-home-cover.jpg
 status: live
 ---
 
@@ -24,7 +24,7 @@ From 2017-2018, my wife and I had our home renovated. I designed the space, and 
 A friend had introduced me to SketchUp, and helped with some initial models of the space. Using these files as a starting point, I spent several months iterating on the design with increasing fidelity, revisiting the process as constraints emerged through demolition. Our house is close to 100 years old, and any renovation—especially in an old house⁠—is bound for surprises.
 
 <Figure size="large">
-  <Grid gutter="0.5rem">
+  <Grid gutter="1.125rem">
     <GridItem width={{ base: '50%' }}>
       <Image
         src="./IMG_0148.jpg"
@@ -50,6 +50,7 @@ A friend had introduced me to SketchUp, and helped with some initial models of t
 Working in 3D allowed me to more carefully consider the spaces and sightlines than a typical plan or one-off render. Using a friend’s VR rig, I walked through the models to better understand flow and utility. Many of the fixtures and appliances considered had 3D models available, so I was able to audition them in the space before making a commitment. When options were presented during the construction, I was able to model each permutation to better understand it in context, rather than rush a decision or leave it solely to the builder. It also helped immensely that the builder was comfortable with SketchUp, so I could send ideas over for them to assess feasibility. In the end, the build came remarkably close to the model.
 
 <ImageCompare
+  name="comparison-1"
   caption="Comparison of SketchUp model and kitchen after"
   itemOne={image1}
   itemTwo={image2}
@@ -61,6 +62,7 @@ Working in 3D allowed me to more carefully consider the spaces and sightlines th
 The final design attempts to blend old with new, and mixes modern lines with natural materials. This was the first space I've designed, but I found the principles familiar to what I knew in other disciplines, and learned a lot about the process along the way. I go into more detail about a few of my favourite features below.
 
 <ImageCompare
+  name="comparison-2"
   caption="Comparison of mid-demolition and final"
   itemOne={image3}
   itemTwo={image4}
@@ -74,8 +76,6 @@ The final design attempts to blend old with new, and mixes modern lines with nat
 <PostImage size="full" src="./0S7A7686.jpg" alt="Dining room/kitchen" />
 
 <PostImage size="full" src="./0S7A7658.jpg" alt="Dining room" />
-
-<br />
 
 ## Lighting
 
@@ -92,22 +92,22 @@ The linear lights consist of flush-mount aluminum channels with diffusers, five-
 In order to eliminate hotspots, I ran two light strips along the side walls of the aluminium channels, and created an offset for consistent spacing between CW•RGB•WW[^3] diode clusters. In testing several methods of mounting and diffusion, I found this approach to be the best balance of heat dissipation and output.
 
 <Figure size="large">
-  <Grid gutter="0.5rem">
-    <GridItem width={{ sm: '1/3 * 100%' }}>
+  <Grid gutter="1.125rem">
+    <GridItem width={{ sm: '33.3334%' }} style={{marginBottom: '2.5rem'}}>
       <Video src="./light-assembly.mp4" />
     </GridItem>
-    <GridItem width={{ sm: '1/3 * 100%' }}>
+    <GridItem width={{ sm: '33.3334%' }} style={{marginBottom: '2.5rem'}}>
       <Image
         src="./IMG_0164x.jpg"
-        sizes="(max-width: 480px) 100vw, (max-width: 700px) 33vw, (max-width: 999px) 235px, (min-width: 1000px) 295px"
+        sizes="(max-width: 480px) 100vw, (max-width: 700px) 33vw, (max-width: 999px) 228px, (min-width: 1000px) 288px"
         widths={[235, 295, 470, 590, 720, 960]}
         alt="Aluminum channel with LED strips on sides"
       />
     </GridItem>
-    <GridItem width={{ sm: '1/3 * 100%' }}>
+    <GridItem width={{ sm: '33.3334%' }} style={{marginBottom: '2.5rem'}}>
       <Image
         src="./IMG_0140.jpg"
-        sizes="(max-width: 480px) 100vw, (max-width: 700px) 33vw, (max-width: 999px) 235px, (min-width: 1000px) 295px"
+        sizes="(max-width: 480px) 100vw, (max-width: 700px) 33vw, (max-width: 999px) 228px, (min-width: 1000px) 288px"
         widths={[235, 295, 470, 590, 720, 960]}
         alt="Dry-fitting aluminum channel assemblies with tension rods"
       />
@@ -118,27 +118,27 @@ In order to eliminate hotspots, I ran two light strips along the side walls of t
 For each fixture, I had an electrician run a standard line-voltage light switch to a junction box near the electrical panel in the basement, and low voltage wire from there back up to its respective installation location. Downstairs, I connected each switched line to a 24V power supply that feeds a Philips Hue LS+ controller and two PWM amplifiers that power the fixture.
 
 <Figure size="large">
-  <Grid gutter="0.5rem">
-    <GridItem width={{ sm: '1/3 * 100%' }}>
+  <Grid gutter="1.125rem">
+    <GridItem width={{ sm: '33.3334%' }} style={{marginBottom: '2.5rem'}}>
       <Image
         src="./IMG_0039.jpg"
-        sizes="(max-width: 480px) 100vw, (max-width: 700px) 33vw, (max-width: 999px) 235px, (min-width: 1000px) 295px"
+        sizes="(max-width: 480px) 100vw, (max-width: 700px) 33vw, (max-width: 999px) 228px, (min-width: 1000px) 288px"
         widths={[235, 295, 470, 590, 720, 960]}
         alt="LED drivers and controllers"
       />
     </GridItem>
-    <GridItem width={{ sm: '1/3 * 100%' }}>
+    <GridItem width={{ sm: '33.3334%' }} style={{marginBottom: '2.5rem'}}>
       <Image
         src="./IMG_0164.jpg"
-        sizes="(max-width: 480px) 100vw, (max-width: 700px) 33vw, (max-width: 999px) 235px, (min-width: 1000px) 295px"
+        sizes="(max-width: 480px) 100vw, (max-width: 700px) 33vw, (max-width: 999px) 228px, (min-width: 1000px) 288px"
         widths={[235, 295, 470, 590, 720, 960]}
         alt="Aluminum channel installation"
       />
     </GridItem>
-    <GridItem width={{ sm: '1/3 * 100%' }}>
+    <GridItem width={{ sm: '33.3334%' }} style={{marginBottom: '2.5rem'}}>
       <Image
         src="./IMG_0591.jpg"
-        sizes="(max-width: 480px) 100vw, (max-width: 700px) 33vw, (max-width: 999px) 235px, (min-width: 1000px) 295px"
+        sizes="(max-width: 480px) 100vw, (max-width: 700px) 33vw, (max-width: 999px) 228px, (min-width: 1000px) 288px"
         widths={[235, 295, 470, 590, 720, 960]}
         alt="Testing independent fixture control"
       />
@@ -151,24 +151,24 @@ In total I built five discrete lights; each addressable individually or by group
 In terms of brightness, at peak output the three fixtures in the kitchen are capable of roughly 23,400 lm at 4200k, with a CRI of 95+. This equates to approximately 29 standard 60W light bulbs or 78(!) Philips Hue GU10s. A (desired) side effect of having this much available light is that in practice, the fixtures are rarely over 50% power, which should extend the lifespan of the LEDs considerably.
 
 <Figure size="large">
-  <Grid gutter="0.5rem">
-    <GridItem width={{ sm: '1/3 * 100%' }}>
+  <Grid gutter="1.125rem">
+    <GridItem width={{ sm: '33.3334%' }} style={{marginBottom: '2.5rem'}}>
       <Image
         src="./corner.jpg"
-        sizes="(max-width: 480px) 100vw, (max-width: 700px) 33vw, (max-width: 999px) 235px, (min-width: 1000px) 295px"
+        sizes="(max-width: 480px) 100vw, (max-width: 700px) 33vw, (max-width: 999px) 228px, (min-width: 1000px) 288px"
         widths={[235, 295, 470, 590, 720, 960]}
         alt="Installed LED channel corner with blue light on"
       />
     </GridItem>
-    <GridItem width={{ sm: '1/3 * 100%' }}>
+    <GridItem width={{ sm: '33.3334%' }} style={{marginBottom: '2.5rem'}}>
       <Image
         src="./IMG_9681.jpg"
-        sizes="(max-width: 480px) 100vw, (max-width: 700px) 33vw, (max-width: 999px) 235px, (min-width: 1000px) 295px"
+        sizes="(max-width: 480px) 100vw, (max-width: 700px) 33vw, (max-width: 999px) 228px, (min-width: 1000px) 288px"
         widths={[235, 295, 470, 590, 720, 960]}
         alt="Installed LED channel corner with light off"
       />
     </GridItem>
-    <GridItem width={{ sm: '1/3 * 100%' }}>
+    <GridItem width={{ sm: '33.3334%' }} style={{marginBottom: '2.5rem'}}>
       <Video src="./controller-2.mp4" />
     </GridItem>
   </Grid>
