--- a/src/content/projects/hue-gallery/index.mdx
+++ b/src/content/projects/hue-gallery/index.mdx
@@ -2,7 +2,7 @@
 title: Hue gallery
 description: Originally authored for net magazine, this article details how to create an immersive media experience with the Philips Hue API.
 date: 2016-12-01
-image: ./IMG_0367.jpg
+image: ./hue-gallery-cover.jpg
 video: ./hue-gallery.mp4
 status: live
 ---
